@@ -1,11 +1,11 @@
+﻿
 Microsoft Visual Studio Solution File, Format Version 11.00
-# Visual Studio 2008
-
-Project("{DBD421FA-32FA-DF9C-690C-AD6E23FC3463}") = "Zero Void", "Assembly-CSharp-firstpass.csproj", "{5FC5EF9C-A0F5-B6B1-1487-C5C59D10B8DF}"
+# Visual Studio 2010
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "Assembly-CSharp-firstpass", "Assembly-CSharp-firstpass.csproj", "{5FC5EF9C-A0F5-B6B1-1487-C5C59D10B8DF}"
 EndProject
-Project("{DBD421FA-32FA-DF9C-690C-AD6E23FC3463}") = "Zero Void", "Assembly-CSharp.csproj", "{1A3A0B16-6806-2E87-814E-2496D9F71E4A}"
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "Assembly-CSharp", "Assembly-CSharp.csproj", "{1A3A0B16-6806-2E87-814E-2496D9F71E4A}"
 EndProject
-Project("{DBD421FA-32FA-DF9C-690C-AD6E23FC3463}") = "Zero Void", "Assembly-UnityScript-firstpass.unityproj", "{C10DA362-F5B4-998D-1124-A52BF5A4522A}"
+Project("{b955b5aa-9c1c-4cd6-9a10-9e34431be3eb}") = "Assembly-UnityScript-firstpass", "Assembly-UnityScript-firstpass.unityproj", "{C10DA362-F5B4-998D-1124-A52BF5A4522A}"
 EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
@@ -13,23 +13,20 @@ Global
 		Release|Any CPU = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(ProjectConfigurationPlatforms) = postSolution
-		{5FC5EF9C-A0F5-B6B1-1487-C5C59D10B8DF}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{5FC5EF9C-A0F5-B6B1-1487-C5C59D10B8DF}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{5FC5EF9C-A0F5-B6B1-1487-C5C59D10B8DF}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{5FC5EF9C-A0F5-B6B1-1487-C5C59D10B8DF}.Release|Any CPU.Build.0 = Release|Any CPU
 		{1A3A0B16-6806-2E87-814E-2496D9F71E4A}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
 		{1A3A0B16-6806-2E87-814E-2496D9F71E4A}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{1A3A0B16-6806-2E87-814E-2496D9F71E4A}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{1A3A0B16-6806-2E87-814E-2496D9F71E4A}.Release|Any CPU.Build.0 = Release|Any CPU
+		{5FC5EF9C-A0F5-B6B1-1487-C5C59D10B8DF}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{5FC5EF9C-A0F5-B6B1-1487-C5C59D10B8DF}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{5FC5EF9C-A0F5-B6B1-1487-C5C59D10B8DF}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{5FC5EF9C-A0F5-B6B1-1487-C5C59D10B8DF}.Release|Any CPU.Build.0 = Release|Any CPU
 		{C10DA362-F5B4-998D-1124-A52BF5A4522A}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
 		{C10DA362-F5B4-998D-1124-A52BF5A4522A}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{C10DA362-F5B4-998D-1124-A52BF5A4522A}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{C10DA362-F5B4-998D-1124-A52BF5A4522A}.Release|Any CPU.Build.0 = Release|Any CPU
 	EndGlobalSection
-	GlobalSection(SolutionProperties) = preSolution
-		HideSolutionNode = FALSE
-	EndGlobalSection
-				GlobalSection(MonoDevelopProperties) = preSolution
+	GlobalSection(MonoDevelopProperties) = preSolution
 		StartupItem = Assembly-CSharp.csproj
 		Policies = $0
 		$0.TextStylePolicy = $1
@@ -55,8 +52,9 @@ Global
 		$0.VersionControlPolicy = $6
 		$6.inheritsSet = Mono
 		$0.ChangeLogPolicy = $7
-		$7.UpdateMode = ProjectRoot
 		$7.inheritsSet = Mono
 	EndGlobalSection
-
+	GlobalSection(SolutionProperties) = preSolution
+		HideSolutionNode = FALSE
+	EndGlobalSection
 EndGlobal
