@@ -1,0 +1,4 @@
+2013-11-16  Xian  <hq.protonox@gmail.com>
+
+	* AnimationTargetRenamer.cs: 
+
